# verdantvibes

./: Cargo.toml  Makefile  docker-compose.yaml
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: rust.yml
config/: dev.yaml
infra/http/: create_event.http  create_user.http  health.http
infra/postgres/: initdb.sh
migrations/: 20240914201846_users.sql  20240915164448_events.sql
src/: config.rs  main.rs
src/controller/: event_controller.rs  mod.rs  user_controller.rs
src/domain/: mod.rs  response.rs  role.rs  sustainable_practice.rs
src/domain/event/: entity.rs  event.rs  mod.rs  repository.rs  service.rs
src/domain/feedback/: feedback.rs
src/domain/participant/: participant.rs
src/domain/user/: entity.rs  mod.rs  repository.rs  service.rs  user.rs
src/shared/: time.rs
