[package]
name = "verdantvibes"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
chrono = {version = "0.4.38", features = ["serde"]}
config = "0.14.0"
serde = "1.0.209"
tracing = "0.1.40"
tracing-actix-web = "0.7.12"
tracing-appender = "0.2.3"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "tls-native-tls", "any", "chrono", "time"] }
anyhow = { version = "1.0.88" , default-features = false }
dotenvy = "0.15.7"
