[package]
name = "verdantvibes"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
chrono = {version = "0.4.39", features = ["serde"]}
config = "0.15.4"
serde = "1.0.216"
tracing = "0.1.41"
tracing-actix-web = "0.7.15"
tracing-appender = "0.2.3"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio", "tls-native-tls", "any", "chrono", "time"] }
anyhow = { version = "1.0.95" , default-features = false }
dotenvy = "0.15.7"
serde_json = "1.0.134"
async-trait = "0.1.83"
